tests/context_unknown_with_field_bad.sl
// Verifies unknown context field is rejected.
struct Allocator {
	impl fn(*Allocator, rawptr, uint, uint, *uint, u32) rawptr
}

struct Ctx {
	mem *Allocator
}

fn f() context Ctx {}

fn g() context Ctx {
	f() context { nope: context.mem }
}
